@@ -4,6 +4,7 @@
 * [L#920791] Expose a few different functions to scripts (thanks Andy Chmilenko)
 * Restrict +listreg and +regnick to operators
 * Update Boost to version 1.51
+* Stabilize the shutdown process
 
 -- 2.8.1 2012-05-30 --
 * [L#830841] Python plugin api signal fix (thanks Andy Chmilenko)
